[gd_scene load_steps=12 format=3 uid="uid://bukv6x5qpfus"]

[ext_resource type="PackedScene" uid="uid://3dn0yrwcrv8w" path="res://valon_tarkistus.tscn" id="1_7vppl"]
[ext_resource type="Script" path="res://uusi_vihollinen.gd" id="1_th14a"]
[ext_resource type="AudioStream" uid="uid://dpfx17kpg2tqy" path="res://audio/hirvio/vihollisen_hengitys1.wav" id="3_eosuu"]
[ext_resource type="AudioStream" uid="uid://coxp2yaiqgye1" path="res://audio/placeholder/hirvioaani1.wav" id="4_hf8re"]
[ext_resource type="AudioStream" uid="uid://tgx7ls7se6l0" path="res://audio/placeholder/hirvioaani2.wav" id="5_usnua"]
[ext_resource type="AudioStream" uid="uid://d3xp6bibdklu7" path="res://audio/placeholder/hirvioaani3.wav" id="6_ki8dm"]
[ext_resource type="AudioStream" uid="uid://ib076mxvlpg7" path="res://audio/hirvio/vihollinen_pakenee.wav" id="7_n60gj"]
[ext_resource type="AudioStream" uid="uid://xj0qm50xbp3n" path="res://audio/hirvio/vihollisen_liike1.wav" id="8_n68mi"]
[ext_resource type="AudioStream" uid="uid://cykcoberqr44e" path="res://audio/pelaaja/pelaaja_kuolee.wav" id="9_hcip7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k26xj"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fwwb5"]
streams_count = 3
stream_0/stream = ExtResource("4_hf8re")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_usnua")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_ki8dm")
stream_2/weight = 1.0

[node name="uusiVihollinen" type="Node2D"]
position = Vector2(3.8147e-06, 0)
rotation = -0.00245404
scale = Vector2(-0.670116, -0.75484)
script = ExtResource("1_th14a")

[node name="alue" type="Area2D" parent="." groups=["newVihollinen"]]
unique_name_in_owner = true
position = Vector2(-176.088, -0.383625)
rotation = 3.14159
scale = Vector2(7.22472, -9.85951)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="alue"]
shape = SubResource("RectangleShape2D_k26xj")

[node name="ValonTarkistus" parent="alue" instance=ExtResource("1_7vppl")]
unique_name_in_owner = true
scale = Vector2(0.248258, 0.98758)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="alue/ValonTarkistus"]
position = Vector2(-0.128705, -0.00582501)
scale = Vector2(0.868357, -0.21713)
polygon = PackedVector2Array(-17.6127, -17.5502, -17.5484, -46.908, 15.2322, -46.818, 16.1728, -15.7637, 46.4319, -15.6806, 46.3588, 17.6292, 16.1023, 16.4169, 16.5398, 46.9053, -17.2495, 46.8124, -17.1814, 15.7609, -45.9275, 15.682, -45.8545, -17.6278)

[node name="alue2" type="Area2D" parent="." groups=["newVihollinen"]]
unique_name_in_owner = true
position = Vector2(177.581, 0.386879)
rotation = 3.14159
scale = Vector2(7.09998, -9.79605)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="alue2"]
shape = SubResource("RectangleShape2D_k26xj")

[node name="ValonTarkistus2" parent="alue2" instance=ExtResource("1_7vppl")]
unique_name_in_owner = true
scale = Vector2(0.248258, 0.98758)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="alue2/ValonTarkistus2"]
position = Vector2(-0.128705, -0.00582501)
scale = Vector2(0.868357, -0.21713)
polygon = PackedVector2Array(-17.6127, -17.5502, -17.5484, -46.908, 15.2322, -46.818, 16.1728, -15.7637, 46.4319, -15.6806, 46.3588, 17.6292, 16.1023, 16.4169, 16.5398, 46.9053, -17.2495, 46.8124, -17.1814, 15.7609, -45.9275, 15.682, -45.8545, -17.6278)

[node name="AudioPaikoillaan" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_eosuu")
bus = &"Vihollinen"

[node name="AudioJahtaus" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_fwwb5")
volume_db = -3.0
bus = &"Vihollinen"

[node name="AudioPakeneminen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_n60gj")
volume_db = 16.0
bus = &"Vihollinen"

[node name="AudioLiikkuminen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_n68mi")
volume_db = -7.0
bus = &"Vihollinen"

[node name="AudioPelaajaKuolee" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("9_hcip7")
volume_db = 7.0
bus = &"Vihollinen"

[connection signal="body_entered" from="alue" to="." method="_on_alue_body_entered"]
[connection signal="body_exited" from="alue" to="." method="_on_alue_body_exited"]
[connection signal="body_entered" from="alue2" to="." method="_on_alue_2_body_entered"]
[connection signal="body_exited" from="alue2" to="." method="_on_alue_2_body_exited"]
